--- a/main.scss
+++ b/main.scss
@@ -36,6 +36,14 @@ body {
     text-align: center;
     color: #fff;
 
+    .landing__h1 {
+        font-size: 4rem;
+    }
+
+    .landing__p {
+        font-size: 2rem;
+    }
+
     .landing__content {
         border: 5px solid #2187B4;
         margin-right: 10rem;
@@ -51,6 +59,8 @@ body {
             color: #fff;
             padding: .55rem 4rem;
             background-color: #2187B4;
+            font-size: 1.55rem;
+            text-transform: uppercase;
         }
     }
   }
@@ -135,6 +145,27 @@ nav {
         font-size: 1.85rem;
         color: #fff;
     }
+}
+
+// video section
+
+#videos {
+    background-color: #1f1f1f;
+}
+
+.video-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position:relative;
+}
+
+.video-info {
+    color: #fff;
+    background-color: #2187B4;
+    margin: -60px;
+    z-index: 8;
+    padding: 2rem;
 }
 
 // media queries
