--- a/main.scss
+++ b/main.scss
@@ -11,7 +11,7 @@ body {
 
  video {
     object-fit: cover;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     position: absolute;
     top: 0;
@@ -22,7 +22,7 @@ body {
     position:absolute;
     top: 0;
     left: 0;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     background-color: rgba($color: #000000, $alpha: .65);
   }
@@ -68,12 +68,12 @@ body {
 nav {
       position: absolute;
       bottom: 0;
-      width: 100vw;
+      width: 100%;
       display: flex;
       justify-content: space-around;
       background-color: rgba($color: #000000, $alpha: .65);
       color: #fff;
-      height: 4vh;
+      height: 5vh;
 
       ul {
           list-style: none;
@@ -162,7 +162,6 @@ nav {
     .video-gif {
         height: auto;
         max-width: 50%;
-        // min-width: 50%;
     }
 }
 
