add video info container to add margin to contents instead of box

--- a/main.css
+++ b/main.css
@@ -230,8 +230,19 @@ nav a {
   background-color: #2187B4;
   margin: -60px;
   z-index: 8;
-  padding: 1rem;
-  min-width: 15rem;
+  height: 10vh;
+  min-width: 18rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.video-info .video-info-container {
+  margin-left: 1rem;
 }
 
 .video-info h2 {
