--- a/main.css
+++ b/main.css
@@ -136,8 +136,8 @@ nav a {
 }
 
 #music h2 {
-  font-size: 2rem;
-  margin-bottom: 2rem;
+  font-size: 3rem;
+  margin-bottom: 4rem;
 }
 
 #music .music__grid {
@@ -188,16 +188,29 @@ nav a {
       -ms-flex-pack: center;
           justify-content: center;
   width: 100%;
+  padding: 1rem;
 }
 
 #music a {
-  font-size: 1.85rem;
+  font-size: 2.25rem;
   color: #fff;
   margin: .45rem;
 }
 
 #videos {
-  background-color: #1f1f1f;
+  background-image: url(assets/sal-boat.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  padding-bottom: 5rem;
+}
+
+.videos-overlay {
+  background-color: rgba(0, 0, 0, 0.65);
+  width: 100%;
+  height: 100%;
+  position: absolute;
 }
 
 .video-container {
@@ -221,8 +234,12 @@ nav a {
 
 .video-heading {
   color: #fff;
-  font-size: 2rem;
+  font-size: 3rem;
+  padding-bottom: 4rem;
+  padding-top: 5rem;
   text-align: center;
+  z-index: 9;
+  position: relative;
 }
 
 .video-info {
@@ -239,6 +256,9 @@ nav a {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .video-info .video-info-container {
@@ -246,12 +266,19 @@ nav a {
 }
 
 .video-info h2 {
-  font-size: 2rem;
+  font-size: 1.75rem;
 }
 
 .video-info a {
   color: #fff;
   text-decoration: none;
+}
+
+footer {
+  text-align: center;
+  background-color: #1f1f1f;
+  color: #fff;
+  padding: 1rem;
 }
 
 @media (max-width: 660px) {
