--- a/main.scss
+++ b/main.scss
@@ -104,8 +104,8 @@ nav {
     padding: 10rem 0;
 
     h2 {
-        font-size: 2rem;
-        margin-bottom: 2rem;
+        font-size: 3rem;
+        margin-bottom: 4rem;
     }
 
     .music__grid {
@@ -141,10 +141,11 @@ nav {
         display: flex;
         justify-content: center;
         width: 100%;
+        padding: 1rem;
     }
 
     a {
-        font-size: 1.85rem;
+        font-size: 2.25rem;
         color: #fff;
         margin: .45rem;
     }
@@ -153,7 +154,19 @@ nav {
 // video section
 
 #videos {
-    background-color: #1f1f1f;
+    background-image: url(assets/sal-boat.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position:relative;
+    padding-bottom: 5rem;
+}
+
+.videos-overlay {
+    background-color: rgba($color: #000000, $alpha: .65);
+    width: 100%;
+    height: 100%;
+    position: absolute;
 }
 
 .video-container {
@@ -170,8 +183,12 @@ nav {
 }
 .video-heading {
     color: #fff;
-    font-size: 2rem;
+    font-size: 3rem;
+    padding-bottom: 4rem;
+    padding-top: 5rem;
     text-align: center;
+    z-index: 9;
+    position: relative;
 }
 
 .video-info {
@@ -183,19 +200,27 @@ nav {
     min-width: 18rem;
     display: flex;
     flex-direction: column;
+    justify-content: center;
 
     .video-info-container {
         margin-left: 1rem;
     }
 
     h2 {
-        font-size: 2rem;
+        font-size: 1.75rem;
     }
 
     a {
         color: #fff;
         text-decoration: none;
     }
+}
+
+footer {
+    text-align: center;
+    background-color: #1f1f1f;
+    color: #fff;
+    padding: 1rem;
 }
 
 // media queries
