--- a/main.css
+++ b/main.css
@@ -242,6 +242,10 @@ nav a {
   position: relative;
 }
 
+.video-container-mobile {
+  display: none;
+}
+
 .video-info {
   color: #fff;
   background-color: #2187B4;
@@ -335,14 +339,7 @@ footer {
         flex-wrap: wrap;
   }
   #music .album {
-    display: relative;
-    width: 62%;
-    margin: 0 auto;
-  }
-  #music .album__overlay {
-    width: 100%;
-    height: 99%;
-    position: absolute;
+    margin: 0;
   }
   #music .album__cover {
     width: 100%;
@@ -353,6 +350,47 @@ footer {
   }
   .nav-right {
     display: none;
+  }
+  #videos {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .video-container {
+    display: none;
+  }
+  .video-container-mobile {
+    display: block;
+    z-index: 12;
+    position: relative;
+    margin: 2rem 0;
+  }
+}
+
+@media (max-width: 380px) {
+  .music__grid {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin: 0;
+  }
+  .album .album__cover {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    -o-object-fit: cover;
+       object-fit: cover;
   }
 }
 /*# sourceMappingURL=main.css.map */
