--- a/main.scss
+++ b/main.scss
@@ -191,6 +191,10 @@ nav {
     position: relative;
 }
 
+.video-container-mobile {
+    display: none;
+}
+
 .video-info {
     color: #fff;
     background-color: #2187B4;
@@ -269,15 +273,7 @@ footer {
         }
 
         .album {
-            display: relative;
-            width: 62%;
-            margin: 0 auto;
-        }
-
-        .album__overlay {
-            width: 100%;
-            height: 99%;
-            position: absolute;
+            margin: 0;
         }
 
         .album__cover {
@@ -292,5 +288,40 @@ footer {
     
     .nav-right {
         display: none;
+    }
+
+    // video section
+
+    #videos {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .video-container {
+        display: none;
+    }
+
+    .video-container-mobile {
+        display: block;
+        z-index: 12;
+        position: relative;
+        margin: 2rem 0;
+    }
+}
+
+@media(max-width: 380px) {
+
+    .music__grid {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin: 0;
+    }
+
+    .album .album__cover {
+        width: 100%;
+        height: 100%;
+        position: relative;
+        object-fit: cover;
     }
 }
