--- a/main.css
+++ b/main.css
@@ -368,6 +368,11 @@ footer {
     z-index: 12;
     position: relative;
     margin: 2rem 0;
+    height: 18rem;
+  }
+  .video-container-mobile iframe {
+    width: 100%;
+    height: 100%;
   }
 }
 
