--- a/main.scss
+++ b/main.scss
@@ -306,6 +306,12 @@ footer {
         z-index: 12;
         position: relative;
         margin: 2rem 0;
+        height: 18rem;
+
+        iframe {
+            width: 100%;
+            height: 100%;
+        }
     }
 }
 
