--- a/main.css
+++ b/main.css
@@ -62,6 +62,7 @@ video {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  padding: 2rem;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -76,10 +77,41 @@ video {
 .landing__header .landing__content .landing__btn {
   text-decoration: none;
   color: #fff;
-  padding: .55rem 4rem;
-  background-color: #2187B4;
+  padding: 1rem 4rem;
+  margin-top: 1rem;
+  background-color: transparent;
+  border: 2px solid #2187B4;
   font-size: 1.55rem;
   text-transform: uppercase;
+  -webkit-transition: background-color 0.4s ease-in;
+  transition: background-color 0.4s ease-in;
+  position: relative;
+  z-index: 1;
+}
+
+.landing__header .landing__content .landing__btn::before {
+  content: '';
+  background-color: #2187B4;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: -1;
+  -webkit-transform-origin: left;
+          transform-origin: left;
+  -webkit-transform: scaleX(0);
+          transform: scaleX(0);
+  -webkit-transition: -webkit-transform 0.4s ease-in;
+  transition: -webkit-transform 0.4s ease-in;
+  transition: transform 0.4s ease-in;
+  transition: transform 0.4s ease-in, -webkit-transform 0.4s ease-in;
+}
+
+.landing__header .landing__content .landing__btn:hover::before,
+.landing__header .landing__content .landing__btn:focus::before {
+  -webkit-transform: scaleX(1);
+          transform: scaleX(1);
 }
 
 nav {
@@ -113,6 +145,12 @@ nav a {
   color: #fff;
   font-size: 1.45rem;
   text-decoration: none;
+  -webkit-transition: 0.3s ease-in;
+  transition: 0.3s ease-in;
+}
+
+nav a:hover {
+  color: #2187B4;
 }
 
 #music {
@@ -135,8 +173,12 @@ nav a {
   padding: 10rem 0;
 }
 
-#music h2 {
+#music .music__heading {
   font-size: 3rem;
+}
+
+#music h2 {
+  font-size: 2.25rem;
   margin-bottom: 4rem;
 }
 
@@ -195,6 +237,12 @@ nav a {
   font-size: 2.25rem;
   color: #fff;
   margin: .45rem;
+  -webkit-transition: 0.3s ease-in;
+  transition: 0.3s ease-in;
+}
+
+#music a:hover {
+  color: #2187B4;
 }
 
 #videos {
