--- a/main.css
+++ b/main.css
@@ -296,7 +296,7 @@ nav a:hover {
 
 .video-info {
   color: #fff;
-  background-color: #2187B4;
+  background-color: #1f1f1f;
   margin: -60px;
   z-index: 8;
   height: 10vh;
@@ -322,15 +322,38 @@ nav a:hover {
 }
 
 .video-info a {
-  color: #fff;
+  color: #2187B4;
+  font-size: 1.2rem;
   text-decoration: none;
+  position: relative;
+}
+
+.video-info a::before {
+  content: '';
+  left: 0;
+  bottom: -3px;
+  position: absolute;
+  width: 100%;
+  height: 5px;
+  background-color: #2187B4;
+  -webkit-transform: translateX(-100%);
+          transform: translateX(-100%);
+  -webkit-transition: -webkit-transform 0.4s ease;
+  transition: -webkit-transform 0.4s ease;
+  transition: transform 0.4s ease;
+  transition: transform 0.4s ease, -webkit-transform 0.4s ease;
+}
+
+.video-info a:hover::before, .video-info a:focus::before {
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
 }
 
 footer {
   text-align: center;
   background-color: #1f1f1f;
   color: #fff;
-  padding: 1rem;
+  padding: .55rem;
 }
 
 @media (max-width: 660px) {
