--- a/main.scss
+++ b/main.scss
@@ -216,7 +216,7 @@ nav {
     align-items: center;
     position:relative;
     margin: 2rem 0;
-
+    
     .video-gif {
         height: auto;
         max-width: 40%;
@@ -238,7 +238,7 @@ nav {
 
 .video-info {
     color: #fff;
-    background-color: #2187B4;
+    background-color: #1f1f1f;
     margin: -60px;
     z-index: 8;
     height: 10vh;
@@ -256,8 +256,27 @@ nav {
     }
 
     a {
-        color: #fff;
+        color: $blue;
+        font-size: 1.2rem;
         text-decoration: none;
+        position: relative;
+
+        &::before {
+            content: '';
+            left: 0;
+            bottom: -3px;
+            position: absolute;
+            width: 100%;
+            height: 5px;
+            background-color:$blue;
+            transform: translateX(-100%);
+            transition: transform 0.4s ease;
+        }
+
+        &:hover::before,
+        &:focus::before {
+            transform: translateX(0);
+        }
     }
 }
 
@@ -265,7 +284,7 @@ footer {
     text-align: center;
     background-color: #1f1f1f;
     color: #fff;
-    padding: 1rem;
+    padding: .55rem;
 }
 
 // media queries
