--- a/main.css
+++ b/main.css
@@ -11,7 +11,7 @@ body {
   font-family: 'PT Sans', sans-serif;
 }
 
-video {
+.landing__video {
   -o-object-fit: cover;
      object-fit: cover;
   width: 100%;
@@ -275,9 +275,8 @@ nav a:hover {
   margin: 2rem 0;
 }
 
-.video-container .video-gif {
-  height: auto;
-  max-width: 40%;
+.video__section--video {
+  width: 50%;
 }
 
 .video-heading {
@@ -297,7 +296,7 @@ nav a:hover {
 .video-info {
   color: #fff;
   background-color: #1f1f1f;
-  margin: -60px;
+  margin: -120px;
   z-index: 8;
   height: 10vh;
   min-width: 18rem;
@@ -432,18 +431,23 @@ footer {
             flex-direction: column;
   }
   .video-container {
-    display: none;
-  }
-  .video-container-mobile {
-    display: block;
-    z-index: 12;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    height: 24rem;
     position: relative;
-    margin: 2rem 0;
-    height: 18rem;
   }
-  .video-container-mobile iframe {
+  .video__section--video {
     width: 100%;
     height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+  .video-info {
+    position: absolute;
+    bottom: 10rem;
   }
 }
 
