--- a/main.scss
+++ b/main.scss
@@ -12,7 +12,7 @@ body {
     font-family: 'PT Sans', sans-serif;
 }
 
- video {
+ .landing__video {
     object-fit: cover;
     width: 100%;
     height: 100vh;
@@ -216,12 +216,12 @@ nav {
     align-items: center;
     position:relative;
     margin: 2rem 0;
-    
-    .video-gif {
-        height: auto;
-        max-width: 40%;
-    }
 }
+
+.video__section--video {
+    width: 50%;
+}
+
 .video-heading {
     color: #fff;
     font-size: 3rem;
@@ -239,7 +239,7 @@ nav {
 .video-info {
     color: #fff;
     background-color: #1f1f1f;
-    margin: -60px;
+    margin: -120px;
     z-index: 8;
     height: 10vh;
     min-width: 18rem;
@@ -358,21 +358,48 @@ footer {
     }
 
     .video-container {
-        display: none;
-    }
-
-    .video-container-mobile {
-        display: block;
-        z-index: 12;
+        flex-direction: column;
+        height: 24rem;
         position: relative;
-        margin: 2rem 0;
-        height: 18rem;
-
-        iframe {
-            width: 100%;
-            height: 100%;
-        }
     }
+
+    .video__section--video {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
+
+    .video-info {
+        position: absolute;
+        bottom: 10rem;
+    }
+
+    // .video-container-mobile {
+    //     width: 100%;
+    //     height: 100%;
+    //     position: relative;
+
+    //     video {
+    //         width: 100%;
+    //         height: 100%;
+    //         position: absolute;
+    //     }
+    // }
+
+    // .video-container-mobile {
+    //     display: block;
+    //     z-index: 12;
+    //     position: relative;
+    //     margin: 2rem 0;
+    //     height: 18rem;
+
+    //     iframe {
+    //         width: 100%;
+    //         height: 100%;
+    //     }
+    // }
 }
 
 @media(max-width: 380px) {
