hide overflow for firefox and move vid info to right for mobile

--- a/main.css
+++ b/main.css
@@ -307,10 +307,6 @@ nav a:hover {
   position: relative;
 }
 
-.video-container-mobile {
-  display: none;
-}
-
 .video-info {
   color: #fff;
   background-color: #1f1f1f;
@@ -328,10 +324,12 @@ nav a:hover {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  overflow: none;
 }
 
 .video-info .video-info-container {
   margin-left: 1rem;
+  overflow: hidden;
 }
 
 .video-info h2 {
@@ -466,6 +464,7 @@ footer {
   .video-info {
     position: absolute;
     bottom: 10rem;
+    right: 10rem;
   }
 }
 
