--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@
 }
 
 body {
-  font-family: 'PT Sans', sans-serif;
+  font-family: "PT Sans", sans-serif;
 }
 
 .landing__video {
@@ -55,7 +55,7 @@ body {
 }
 
 .landing__header .landing__content {
-  border: 5px solid #2187B4;
+  border: 5px solid #2187b4;
   margin-right: 10rem;
   min-width: 500px;
   min-height: 30vh;
@@ -80,7 +80,7 @@ body {
   padding: 1rem 4rem;
   margin-top: 1rem;
   background-color: transparent;
-  border: 2px solid #2187B4;
+  border: 2px solid #2187b4;
   font-size: 1.55rem;
   text-transform: uppercase;
   -webkit-transition: background-color 0.4s ease-in;
@@ -90,8 +90,8 @@ body {
 }
 
 .landing__header .landing__content .landing__btn::before {
-  content: '';
-  background-color: #2187B4;
+  content: "";
+  background-color: #2187b4;
   position: absolute;
   top: 0;
   left: 0;
@@ -150,7 +150,7 @@ nav a {
 }
 
 nav a:hover {
-  color: #2187B4;
+  color: #2187b4;
 }
 
 #music {
@@ -243,17 +243,17 @@ nav a:hover {
 #music a {
   font-size: 2.25rem;
   color: #fff;
-  margin: .45rem;
+  margin: 0.45rem;
   -webkit-transition: 0.3s ease-in;
   transition: 0.3s ease-in;
 }
 
 #music a:hover {
-  color: #2187B4;
+  color: #2187b4;
 }
 
 #videos {
-  background-image: url(assets/sal-boat.jpg);
+  background-image: url(../assets/sal-boat.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -262,7 +262,7 @@ nav a:hover {
 }
 
 .videos-overlay {
-  background-color: rgba(0, 0, 0, 0.65);
+  background-color: rgba(0, 0, 0, 0.7);
   width: 100%;
   height: 100%;
   position: absolute;
@@ -337,19 +337,19 @@ nav a:hover {
 }
 
 .video-info a {
-  color: #2187B4;
+  color: #2187b4;
   font-size: 1.2rem;
   text-decoration: none;
   position: relative;
 }
 
 .video-info a::before {
-  content: '';
+  content: "";
   left: 0;
   bottom: -3px;
   position: absolute;
   width: 100%;
-  background-color: #2187B4;
+  background-color: #2187b4;
   -webkit-transform: translateX(-100%);
           transform: translateX(-100%);
   -webkit-transition: -webkit-transform 0.4s ease;
@@ -368,7 +368,7 @@ footer {
   text-align: center;
   background-color: #1f1f1f;
   color: #fff;
-  padding: .55rem;
+  padding: 0.55rem;
 }
 
 @media (max-width: 660px) {
